styles.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");

/* Reset default styles */
body,
html {
  margin: 0;
  height: 100%;
}

html {
  scroll-behavior: smooth;
}

body {
  padding-top: 0;
  background-color: #f2f2f2;
  font-family: "Nunito Sans", sans-serif;
  color: #333;
  display: grid;
  grid-template-rows: auto 1fr auto;
  font-optical-sizing: auto;
}

h2 {
  text-align: center;
}

/* Header styles */
.navbar-dark .navbar-nav .nav-link {
  color: white !important;
  z-index: 100;
}

header {
  text-align: center;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
  height: 60px;
}

header nav a {
  color: white;
  margin: 0 10px;
  text-decoration: none;
  font-size: 18px;
}

.navbar-nav .nav-link:hover {
  color: green !important;
}

header h1 {
  margin: 0;
}

/* Main content styles */
main {
  padding-top: 60px;
}

section {
  display: flex;
  justify-content: center;
  scroll-margin-top: 60px;
  flex-direction: column;
  width: 80%; /* Set the width to 80% */
  margin: 0 auto; /* Add auto margins to horizontally center the section */
  padding: 20px 0; /* Add vertical padding */
}

section ul {
  list-style-type: none;
  padding: 0;
  width: 100%; /* Take up the full width */
  box-sizing: border-box; /* Include padding and border in element's total width and height */
}

section ul li {
  margin-bottom: 10px;
  text-align: center; /* Center the text */
}

/* Other styles */
h1 {
  font-size: 36px;
  font-weight: bold;
  margin-bottom: 20px;
}

p,
li {
  color: #777;
}

.font-color {
  color: black;
}

.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

.navbar {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.card {
  transition: background-color 0.3s ease;
}

.card:hover {
  background-color: #f5f5f5;
}

/* ABOUT SECTION  */
#about {
  position: relative;
}

#about h2{
  margin-bottom: 10px;
}

#about .fa-address-card {
  position: absolute; /* This allows the icon to be positioned relative to the about section */
  top: 10px; /* Adjust this value to move the icon vertically */
  right: 10px; /* Adjust this value to move the icon horizontally */
  font-size: 25px; /* Adjust the size of the icon */
}

#about:hover .fa-address-card {
  color: #008000; /* Change the color on hover */
  transition: color 0.3s ease; /* Add a transition effect */
}

.about-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  align-items: center;
  background-color: #f9f9f9;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease;
  position: relative;
  min-height: 450px;
  transition: all 0.3s ease;
}

.about-content:hover {
  box-shadow: 0 0 10px rgba(0, 128, 0, 0.3); /* darker green shadow on hover */
  transform: scale(1.01);
}

#about p {
  font-size: 1em; /* Use ems instead of pixels */
  max-width: 90%; /* Use percentage instead of pixels */
  margin: 0 auto;
}

.button-container {
  display: flex;
  gap: 10px;
  justify-content: center;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 10px;
  margin-right: 10px;
}

.button {
  background-color: black;
  color: white;
  padding: 10px 20px;
  text-decoration: none;
  border-radius: 5px;
  transition: background-color 0.3s ease;
  outline: none;
  border: none;
  text-transform: uppercase;
}

.button:focus {
    border: none;
    outline: none;
}

.button:hover {
  background-color: green;
  text-decoration: none;
  color: white;
  border: none;
}

.img-fluid {
  max-width: 150px;
  max-height: 150px;
  border-radius: 50%;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
  transition: all 0.3s ease;
  align-self: center; /* Align this item to the center */
  margin: 0 auto; /* Center the image horizontally */
}

.about-icons {
  display: flex;
  flex-direction: row; /* Change this from column to row */
  font-size: 25px;
  transition: all 0.3s ease;
  justify-content: center;
  align-items: center;
  gap: 10px;
  color: black;
}

.about-icons a {
  color: black;
  transition: color 0.3s ease;
}

.about-icons a:hover {
  color: green;
}
/* ABOUT SECTION  */



/* Skills section */
#skills {
  position: relative;
}

.skills{
  margin-bottom: 12px;
}

#skillsCarousel {
  border-radius: 15px;
  background-color: #f9f9f9;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease;
  display: flex; /* Use Flexbox */
  flex-direction: column; /* Stack the children vertically */
  justify-content: center; /* Center the children vertically */
  align-items: center; /* Center the children horizontally */
  min-height: 450px;
}

.carousel-item {
  height: 100%; /* make the carousel items fill the height of the carousel */
  display: flex;
  flex-direction: column;
  justify-content: flex-start; /* align the content to the top */
  align-items: center;
  position: relative;
}

.carousel-icon {
  position: absolute; /* This allows the icon to be positioned relative to the carousel item */
  top: 0px; /* Aligns the icon with the top of the carousel item */
  right: 20px; /* Aligns the icon with the right of the carousel item */
  font-size: 20px;
}

#skillsCarousel:hover .carousel-icon {
  color: green; /* Green for languages */
}

#skillsCarousel:hover {
  box-shadow: 0 0 10px rgba(0, 128, 0, 0.3); /* darker green shadow on hover */
  transform: scale(1.01);
}
/* ... */

